--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/material-dashboard.css" async />
         <link rel="stylesheet" type="text/css" href="assets/css/main.css" async />
         <!-- <link href="https://fonts.googleapis.com/css?family=Spicy+Rice" rel="stylesheet"> -->
+        <link rel="stylesheet" type="text/css" href="assets/css/demo.css" async />
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" async />
         <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" async />
     </noscript>
