--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <base href='/'>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <!-- <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">  -->
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0"> 
     <meta name="theme-color" content="#c00"> 
     <meta name="title" content="RFP Gurus | Find RFP Bid Sites | Government Request for Proposal">
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/rfp-favicon.png" />
