--- a/src/index.html
+++ b/src/index.html
@@ -75,9 +75,21 @@
 <body class="bootstrap-collapse" style="display: none;">
     <app-my-app>
     </app-my-app>
-   
+    <!-- <script src="./node_modules/jquery/dist/jquery.js"></script> -->
     <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js" defer></script>
-
+<!--     
+<script>
+    window.onscroll = function() {myFunction()};
+    var header = document.getElementById("myHeader");
+    var sticky = header.offsetTop;
+    function myFunction() {
+      if (window.pageYOffset > sticky) {
+        header.classList.add("sticky");
+      } else {
+        header.classList.remove("sticky");
+      }
+    }
+    </script> -->
 </body>
 
 </html>
